# Continuum

./: .editorconfig  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CURRENT_MILESTONE.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  ct.bat  ct.sh  instruc  package.json  pyproject.toml  setup.py  struc
apps/cli/: package.json
assets/animations/: .gitkeep
assets/banners/: .gitkeep
assets/brand/: .gitkeep
assets/diagrams/: .gitkeep
assets/favicons/: .gitkeep
assets/logos/: .gitkeep
assets/screenshots/: .gitkeep
assets/social/: .gitkeep
benchmarks/landing-page/: expected_artifacts.json  input_prompt.md
core/architecture/: glossary.md
core/constitution/: constitution.md
core/principles/: principles.md
docs/: BIBLE.md  VISION_2030.md  cookbook.md
docs/architecture/: meta-model.md  taxonomy.md
engines/python/: pyproject.toml
engines/python/src/engine/cli/: ct.py
engines/python/src/engine/execution/: router.py
engines/python/src/engine/execution/agents/: antigravity.py  demo.py
engines/python/src/engine/workflow/: engine.py
knowledge/FrontendForce/: Components.md  Layout.md  Typography.md
runtime/: README.md  lifecycle.md
specs/: SPEC-0001-continuum-core.md  SPEC-0002-cli.md  SPEC-0003-runtime.md  SPEC-0004-provider-interface.md  SPEC-0005-events.md  SPEC-0006-tasks.md  SPEC-0007-artifacts.md  SPEC-0008-organizations.md  SPEC-0009-knowledge.md  SPEC-0010-governance.md
tests/: test_execution.py  test_ff_alpha.py  test_governance.py  test_mcp_plugins.py  test_org_runtime.py  test_provider.py  test_runtime.py
(+88 files in other folders)
