[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "continuum-os"
version = "0.1.0"
description = "The Operating System for AI Organizations"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pyyaml"
]

[project.scripts]
ct = "engine.cli.main:main"
